--- a/roles/scm/tasks/main.yaml
+++ b/roles/scm/tasks/main.yaml
@@ -1,17 +1,19 @@
+- include: ../../../common/check_mandatory_variables.yaml
+
 - name: Check if the Repository already exists
   uri: method=GET body_format=json url={{ gogs_url_api }}/user/repos
-       force_basic_auth=yes user={{ user | mandatory }} password={{ password | mandatory }}
+       force_basic_auth=yes user={{ username }} password={{ password }}
   register: gogs_list_repositories
   tags: gogs
 
-- fail: msg="Repository {{ project_name }} already exists" 
+- fail: msg="### Repository {{ project_name }} already exists" 
   when: "{{ project_name in item.full_name }}"
   with_items: "{{ gogs_list_repositories.json }}"
   tags: gogs
 
 - name: Create a new Repository named {{ project_name }}
   uri: method=POST body_format=json url={{ gogs_url_api }}/user/repos
-       force_basic_auth=yes user={{ user | mandatory }} password={{ password | mandatory }}
+       force_basic_auth=yes user={{ username }} password={{ password }}
        body="{\"name\":\"{{ project_name }}\", \"description\":\"{{ project_description }}\", \"private\":{{ project_private | default(false) }} }"
   register: gogs_create_repository
   failed_when: gogs_create_repository.status != 201
