--- a/roles/ide/tasks/main.yaml
+++ b/roles/ide/tasks/main.yaml
@@ -2,18 +2,18 @@
   tags: netbeans
 
 - name: Create a Project Directory
-  file: path={{ project_directory }}/{{ item }} state=directory
+  file: path={{ project_directory }}/{{ project_name }}/{{ item }} state=directory
   with_items: 
      - src/main/resources/META-INF
      - src/main/webapp/WEB-INF
   tags: netbeans
 
 - name: Create Source Code Directory based on Project's Package
-  file: path={{ project_directory }}/src/main/java/{{ project_package | regex_replace("\.", "/") }} state=directory
+  file: path={{ project_directory }}/{{ project_name }}/src/main/java/{{ project_package | regex_replace("\.", "/") }} state=directory
   tags: netbeans
 
 - name: Create all the necessary files inside the project directory
-  template: src=project/netbeans/{{ item }}.j2 dest={{ project_directory }}/{{ item }}
+  template: src=project/netbeans/{{ item }}.j2 dest={{ project_directory }}/{{ project_name }}/{{ item }}
   with_items:
      - nb-configuration.xml
      - pom.xml
